# 2dTransformVisualizer

./: CartesianGrid.py  DrawRectangle.py  README.md  Rectangle.py  RectangleList.py  RectangleSignalEmitter.py  TransformationHandler.py  main.py  pyproject.toml
Rectangle/: DrawRectangle.py  Rectangle.py  RectangleList.py  RectangleSignalEmitter.py
Utils/: CartesianGrid.py  TransformationHandler.py
