[tool.poetry]
name = "2dtransformeditor"
version = "0.1.0"
description = ""
authors = ["Christian Singer <christian.singer@mail.schwarz>"]
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.9,<3.12"
pyside6 = "^6.5.2"
numpy = "^1.25.2"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
